<resources>
    <string name="app_name">LoginForm</string>
    <string name="txt_login">Login</string>
    <string name="txt_message">Welcome Back!</string>
    <string name="hint_email">Enter Your Username / Email</string>
    <string name="hint_password">Enter Your Password</string>
    <string name="txt_forgot">Forgot Password?</string>
    <string name="btn_text">Login</string>
    <string name="txt_checkAcc">Don’t have an account?</string>
    <string name="txt_signup">Signup</string>
    <string name="txt_option">Or</string>
    <string name="txt_btnLoginFace">Login with Facebook</string>
    <string name="txt_btnLoginGG">Login with Google</string>
</resources>