<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <TextView
        android:id="@+id/textView_Login"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/txt_login"
        android:textColor="@color/balck1"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/textView_Message"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/txt_message"
        android:textAlignment="center"
        android:textColor="@color/balck1"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_Login"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.01" />

    <EditText
        android:id="@+id/editText_email"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_Message"

        android:autofillHints="emailAddress"

        android:background="@drawable/custom_edt"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/balck1"
        android:textColorHint="@color/balck3"
        android:textSize="16sp"

        app:layout_constraintVertical_bias="0.0"

        android:paddingStart="4dp"
        android:paddingTop="15dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"

        android:layout_marginTop="43dp" />

    <EditText
        android:id="@+id/editText_password"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_email"

        android:autofillHints="password"

        android:background="@drawable/custom_edt"
        android:drawableEnd="@drawable/eye_password"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@color/balck1"
        android:textColorHint="@color/balck3"
        android:textSize="16sp"

        app:layout_constraintVertical_bias="0"

        android:paddingStart="4dp"
        android:paddingTop="15dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"

        android:layout_marginTop="28dp" />

    <TextView
        android:id="@+id/textView_forgot"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/txt_forgot"
        android:textColor="@color/blue"
        android:textSize="14sp"

        app:layout_constraintTop_toBottomOf="@id/editText_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0"

        android:layout_marginTop="12dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/btn_text"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:background="@drawable/custom_btn"

        app:layout_constraintTop_toBottomOf="@id/textView_forgot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintVertical_bias="0"

        android:padding="13dp"

        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/textView_checkAccount"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/txt_checkAcc"
        android:textSize="14sp"
        android:textColor="@color/balck1"

        app:layout_constraintTop_toBottomOf="@id/button_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textView_signup"

        app:layout_constraintVertical_bias="0"

        android:layout_marginTop="16dp"

        app:layout_constraintHorizontal_chainStyle="packed" />

    <TextView
        android:id="@+id/textView_signup"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/txt_signup"
        android:textSize="14sp"
        android:textColor="@color/blue"

        app:layout_constraintTop_toBottomOf="@id/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView_checkAccount"

        app:layout_constraintVertical_bias="0"

        android:layout_marginStart="11dp"
        android:layout_marginTop="16dp" />

    <View
        android:id="@+id/view_line"

        android:layout_width="match_parent"
        android:layout_height="1dp"

        app:layout_constraintTop_toBottomOf="@id/textView_checkAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:background="@color/balck5"

        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="28dp" />

    <TextView
        android:id="@+id/textView_option"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/txt_option"
        android:textSize="14sp"
        android:textColor="@color/balck4"
        android:background="@color/white"

        app:layout_constraintTop_toTopOf="@id/view_line"
        app:layout_constraintStart_toStartOf="@id/view_line"
        app:layout_constraintEnd_toEndOf="@id/view_line"
        app:layout_constraintBottom_toBottomOf="@id/view_line"

        app:layout_constraintCircle="@id/view_line"

        android:padding="4dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_loginFacebook"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/txt_btnLoginFace"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:background="@drawable/custom_btn"
        android:drawableStart="@drawable/facebook_logo"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_line"

        app:layout_constraintVertical_bias="0"

        android:padding="13dp"

        android:layout_marginTop="33dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_loginGoogle"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/txt_btnLoginGG"
        android:textSize="14sp"
        android:drawableStart="@drawable/google_logo"
        android:background="@drawable/custom_edt"

        app:layout_constraintTop_toBottomOf="@id/button_loginFacebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintVertical_bias="0"

        android:padding="13dp"

        android:layout_marginTop="23dp" />


</androidx.constraintlayout.widget.ConstraintLayout>